@@ -1,7 +1,9 @@
 2009-03-05  Fatih Aşıcı  <fatih@pardus.org.tr>
 	* zorg/config.py:
-		Do not create InputDevice sections. We will use
+		- Do not create InputDevice sections. We will use
 		new input hotplug mechanism for all input devices.
+		- Do not create Files section. We will use
+		catalogue paths.
 
 2009-02-19  Fatih Aşıcı  <fatih@pardus.org.tr>
 	* zorg/hwdata.py:
